--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "custom-tokenizer",
+  "homepage": "https://yghugardare.github.io/custom-tokenizer/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
@@ -9,7 +10,7 @@
     "lint": "eslint .",
     "preview": "vite preview",
     "predeploy": "npm run build",
-    "deploy": "gh-pages -d build"
+    "deploy": "gh-pages -d dist"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
